# librepods-ng

./: .gitignore  AGENT_COMPLETION_REPORT.md  AUDIT_SUMMARY.md  Cargo.toml  GAP_ANALYSIS.md  IMPLEMENTATION_PRIORITY.md  INDEX.md  Makefile.toml  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  PHASE6_IMPLEMENTATION.md  PHASE7_IMPLEMENTATION.md  PROJECT_MANIFEST.md  README.md  README_LIBREPODS_AGENT.md  SYNC_REPORT.md  build.rs  justfile
.github/workflows/: ci.yml  hardware.yml  release.yml
android/root_module/: module.prop  service.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/benches/: benchmarks.rs
crates/core/src/: bluetooth.rs  change_applier.rs  ci_pipeline.rs  codebase_diff.rs  coverage_analyzer.rs  crypto.rs  device.rs  dmca_scanner.rs  error.rs  events.rs  firmware_analyzer.rs  firmware_security.rs  firmware_version_analyzer.rs  gpl_checker.rs  implementation_executor.rs  ingestion.rs  legal_scan.rs  lib.rs  manager.rs  merge_planner.rs  models.rs  parser.rs  protocol.rs  protocol_analyzer.rs  protocol_comparator.rs  protocol_drift.rs  release_manager.rs  release_notes.rs  sbom_generator.rs  security.rs  state.rs  test_runner.rs  three_way_diff.rs  trademark_checker.rs  upstream.rs  verification.rs
crates/core/src/backends/: android.rs  bluez.rs  corebluetooth.rs  mod.rs  winrt.rs
crates/core/tests/: hardware_test.rs  integration_tests.rs  phase1_ingestion.rs  phase2_legal_scan.rs  phase3_protocol_drift.rs  phase4_merge_plan.rs  phase5_implementation.rs  phase6_verification.rs  phase7_release.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
docs/adr/: 0001-bluetooth-abstraction.md  0002-protocol-parser.md
docs/src/: developer_guide.md  user_manual.md
flutter/lib/: bridge_generated.dart  main.dart
flutter/lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_ja.arb  app_zh.arb
packaging/: build-appimage.sh  build-deb.sh  build-dmg.sh  build-flatpak.sh  build-msix.ps1
