[workspace]
members = ["crates/core", "crates/ffi", "crates/cli"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Rivers-Engineering"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Rivers-Engineering/librepods-ng"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
nom = "7.1"
blake3 = "1.5"
crc = "3.0"
bitflags = "2.4"
heapless = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
