[package]
name = "librepods-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
librepods-core = { path = "../core" }
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

[[bin]]
name = "librepods"
path = "src/main.rs"
