[package]
name = "librepods-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
nom = { workspace = true }
blake3 = { workspace = true }
crc = { workspace = true }
bitflags = { workspace = true }
heapless = { workspace = true }
zeroize = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["std"]
std = []
no_std = []
bluetooth-linux = []
bluetooth-macos = []
bluetooth-windows = []
bluetooth-android = []

[lib]
name = "librepods_core"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
